<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DiaChi_Manager_Activity">

    <include layout="@layout/toolbar_normal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:textColor="#4E352F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nh_p_a_ch_nh_n_h_ng" />

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/t_n_ng_i_nh_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/editText_HoTen"
                        android:textColorHint="#BBA19A"
                        android:backgroundTint="#BBA19A"
                        android:hint="@string/nh_p_h_t_n_ng_i_nh_n"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/s_i_n_tho_i"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:inputType="number"
                        android:id="@+id/editText_SDT"
                        android:textColorHint="#BBA19A"
                        android:backgroundTint="#BBA19A"
                        android:hint="@string/nh_p_s_i_n_tho_i_nh_n_h_ng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/a_ch_nh_n_h_ng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/editText_DiaChi"
                        android:textColorHint="#BBA19A"
                        android:backgroundTint="#BBA19A"
                        android:hint="@string/nh_p_s_nh_t_n_ng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/t_nh_th_nh_ph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:textColorHint="#BBA19A"
                            android:backgroundTint="#BBA19A"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <Spinner
                            android:id="@+id/spinner_ThanhPho"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/qu_n_huy_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:textColorHint="#BBA19A"
                            android:backgroundTint="#BBA19A"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <Spinner
                            android:id="@+id/spinner_QuanHuyen"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textColor="#4E352F"
                        android:textSize="17sp"
                        android:text="@string/ph_ng_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:textColorHint="#BBA19A"
                            android:backgroundTint="#BBA19A"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <Spinner
                            android:id="@+id/spinner_PhuongXa"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </RelativeLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_Finish"
                    android:background="@drawable/shape_button5"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="#4E352F"
                    android:textSize="17sp"
                    android:text="Hoàn Thành" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>